--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 body {
   horizontally;
-  font-family: "Helvetica";
+  font-family: "Helvetica", sans-serif;
+  text-align: center;
 }
 
 h1 {
@@ -22,4 +23,36 @@ h3 {
 
 p {
 
+}
+
+#Header {
+background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.jpg');
+
+}
+
+#ZweiterHeader {
+  background-image: url("../images/the-flatiron-building.png");
+  color: white;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+#menu {
+  font-size: 18px;
+  color: white;
+  text-decoration: underline;
+}
+
+#letztes {
+  text-align: left;
+  background-color: dimgrey;
+  color: white;
+}
+
+#section1 p {
+  font-size: 14px;
+}
+
+#section2 p {
+  font-size: 14px;
 }
